# AI-portfolio

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOY.md  PRESENTATION.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: sync-portfolio.yml
backend/: .dockerignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_project_category.py  0004_i18n_english.py  0005_skill_name_en.py  0006_i18n_spanish.py  0007_analytics_ip.py  0008_profile_cv_urls.py  0009_profile_cv_es.py
backend/app/: config.py  db.py  i18n.py  knowledge.md  main.py  models.py  security.py  uploads.py
backend/app/routers/: admin.py  admin_content.py  analytics.py  chat.py  exports.py  github.py  portfolio.py  profile.py  social.py
backend/app/services/: cv.py  email.py  llm.py
backend/sql/: schema.sql  seed.sql
dashboard/backend/: Dockerfile  pyproject.toml
dashboard/backend/alembic/: script.py.mako
dashboard/backend/app/: config.py  i18n.py  main.py  models.py
dashboard/backend/sql/: seed.sql
dashboard/frontend/: index.html  nginx.conf  tailwind.config.js
dashboard/frontend/src/: App.jsx  i18n.jsx  index.css  main.jsx
frontend/: .eslintrc.cjs  index.html  tailwind.config.js  vite.config.js
frontend/src/: Admin.jsx  App.jsx  analytics.js  config.js  i18n.jsx
frontend/src/admin/: BlogEditor.jsx  CaseStudiesEditor.jsx  CvAssistant.jsx  ProfileEditor.jsx  SkillsEditor.jsx  SocialEditor.jsx  TimelineEditor.jsx  lib.jsx
frontend/src/components/: ChatWidget.jsx  Footer.jsx  Navbar.jsx
(+30 files in other folders)
