[project]
name = "portfolio-backend"
version = "1.0.0"
description = "API FastAPI du portfolio (data flow PostgreSQL -> API -> frontend)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "reportlab>=4.2.0",
    "httpx>=0.28.0",
    "openai>=1.59.0",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
